# prime-practice-patcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_release.sh  index.js  main.py  package-lock.json  package.json  patch.bat  patch.sh  prime-practice-mod-patcher.js  tsconfig.json  upload.sh
formats/: GCDisc.py
res/: opening_practice.bnr
src/: Logger.ts  ReleaseInfo.cpp  ReleaseInfo.hpp  fs.hpp  main.cpp  main.ts
src/commands/: CommandBase.ts  PatchCommand.ts  ReleaseCommand.ts
src/crypto/: crypto.cpp  crypto.hpp
src/dol/: DolFile.cpp  DolFile.hpp
src/patcher/: Patcher.cpp  Patcher.hpp  Patcher.ts
src/release/: ReleaseBuilder.cpp  ReleaseBuilder.hpp  ReleaseBuilder.ts
src/utils/: Crypto.ts  ReleaseInfo.ts  png_to_rgb5a3.js  rgb5a3_to_png.js
